# semantic-forgetfulness

./: .gitignore  README.md  _verify_step2.py  _verify_step3.py  _verify_step4.py  claude.md  config.yaml  environment.yml  eval.py  eval.sh  main.py  overview.md  pretrain.sh  pyproject.toml  references.md  run.sh
architecture/: L1.md  L2.md  L3.md  cache-control.md  inference.md  pretraining.md  reconstructor.md
docs/: finetuning-guide.md  pretraining-guide.md  training-guide.md
docs/architecture/: benchmarks-validation.md  compression.md  hyperparameters.md  reconstructor.md
docs/literature/: compllm.md
docs/misc/: benchmarks.md
docs/overviews/: answers.md  high-level-overview.md
literature/: compllm.md  fastkv.md  references.md
literature/references/: brain-inspired-forgetting-niu-2023.md  context-rot-chroma.md  hidden-memory-architecture-microsoft.md  lifelong-learning-nature-2025.md  (+1 more)
misc/: benchmarks.md  framing-directions.md
overviews/: high-level-overview.md
phase2/: deferred-features.md
problems/: answers.md  problems.md
src/: cache_controller.py  compressor.py  config.py  entity_extractor.py  entity_graph.py  fingerprinter.py  importance_scorer.py  inference_loop.py  preprocess_data.py  reconstructor.py  segmenter.py
tests/: conftest.py  test_cache_controller.py  test_compressor.py  test_config.py  test_data_structures.py  test_entity_extractor.py  test_entity_graph.py  test_fingerprinter.py  test_importance_scorer.py  test_inference_loop.py  test_l1_store.py  test_l2_store.py  test_l3_store.py  test_reconstructor.py  test_segmenter.py
(+47 files in other folders)
