[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-forgetfulness"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "transformers>=4.40",
    "sentence-transformers>=3.0",
    "spacy>=3.7",
    "usearch>=2.0",
    "networkx>=3.2",
    "peft>=0.10",
    "numpy>=1.26",
    "accelerate>=0.28",
    "pyyaml>=6.0",
    "datasets>=2.18",
    "wandb>=0.17",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]
profiling = ["psutil>=5.9", "plotly>=5.0"]

[tool.setuptools.packages.find]
where = ["src"]
